[add] favicon for browser tab

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="'#0A0A3C">
+    <meta name="description" content="AOJ Searcher" />
     <title>AOJ Searcher</title>
 </head>
 
